WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125933
Fix page visibility api test, initialization in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=125933
Summary
Fix page visibility api test, initialization in WebKit2
Gavin Barraclough
Reported
2013-12-18 11:12:21 PST
The API test for page visibility is broken, fix this. This revealed a recent regression in WebKit2 (introduced in
https://bugs.webkit.org/show_bug.cgi?id=123379
), caused by a typo removing a '!'.
Attachments
Fix
(2.81 KB, patch)
2013-12-18 11:49 PST
,
Gavin Barraclough
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2013-12-18 11:49:22 PST
Created
attachment 219554
[details]
Fix
Gavin Barraclough
Comment 2
2013-12-18 12:47:21 PST
Committed revision 160790.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug