Fix page visibility api test, initialization in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=125933

Reviewed by Anders Carlsson.

The API test for page visibility is broken, fix this. This revealed a recent regression in WebKit2
(introduced in https://bugs.webkit.org/show_bug.cgi?id=123379), caused by a typo removing a '!'.

Source/WebKit2:

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::setVisibilityState):
    - Fix regression, accidentally removed a '!'.

Tools:

* TestWebKitAPI/Tests/mac/PageVisibilityStateWithWindowChanges.mm:
(TestWebKitAPI::TEST_F):
    - Running a test on WebKit1 twice is not the same as running it on WebKit2!



Canonical link: https://commits.webkit.org/143937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160790 268f45cc-cd09-0410-ab3c-d52691b4dbfc